Ignore errors when zlib streams fail on the checksum. Fixes bug 688716.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6811 a1074d23-0009-0410-80fe-cf8c14f379e6