gs/src/szlibd.c
@@ -87,6 +87,15 @@ s_zlibD_process(stream_state * st, stream_cursor_read * pr,
 	case Z_STREAM_END:
 	    return EOFC;
 	default:
+            if (!strcmp("incorrect data check", zs->msg))
+            {
+                /* Ignore errors when zlib streams fail on the checksum.
+                 * Adobe, Apple and xpdf don't fail on pdf:s where this happens,
+                 * so neither should we. fixes bug 688716.
+                 */
+                errprintf("warning: ignoring zlib error: %s\n", zs->msg);
+                return EOFC;
+            }
 	    return ERRC;
     }
 }
